fixed home page z-index

--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ header>div {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 2;
     /* gap: 20px; */
 }
 
@@ -175,11 +176,13 @@ header>div {
     width: 75%;
     height: auto;
     max-width: 1400px;
+    z-index: 2;
 }
 
 .logoMainVetical {
     display: none;
     padding-top: 90px;
+    z-index: 2;
 }
 
 .slogan,
